infra/gateway/refernece-grant.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: allow-cert-manager
  namespace: envoy-gateway-system
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: envoy-gateway-system
  to:
  - group: gateway.networking.k8s.io
    kind: Gateway
