infra/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
  namespace: envoy-gateway-system
spec:
  gatewayClassName: envoy-gateway-class
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: "*.cardflex.in"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      port: 443
      protocol: HTTPS
      hostname: '*.cardflex.in'
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: cardflex-tls
      allowedRoutes:
        namespaces:
          from: All
